# git_memoire

./: README.md
annexes/: README.md  UCCA_FR.ods  demo.bat  memoire_m2.docx  memoire_m2_1_2.docx  memoire_m2_1_5.docx  samsa_results.txt  test_alector.bat
annexes/biblio_memoire_m2/: biblio_memoire_m2.rdf  biblio_memoire_m2_1_5.rdf
annotation_tool/: README.md
annotation_tool/simpeval/: requirements.txt  setup.cfg  setup.py
annotation_tool/simpeval/simpeval/: cli.py  samsa.py
annotation_tool/simpeval/simpeval.egg-info/: PKG-INFO  requires.txt
annotation_tool/simpeval/simpeval/aligner/: corenlp_utils.py
annotation_tool/simpeval/simpeval/utils/: constants.py  preprocessing.py  resources.py  ucca_utils.py
annotation_tool/simpeval/tests/: test_samsa.py
corpus/: README.md
corpus/corpus_annote_bertm/: 143_CM1_litt_orig_dragonneminuit_0.xml  143_CM1_litt_orig_dragonneminuit_1.xml  143_CM1_litt_orig_dragonneminuit_2.xml  23_CE1_sci_orig_herisson_0.xml
corpus/corpus_annoté_bilstm/: 142_CM1_litt_orig_oeilduloup_0.xml  143_CM1_litt_orig_dragonneminuit_0.xml  143_CM1_litt_orig_dragonneminuit_1.xml  143_CM1_litt_orig_dragonneminuit_2.xml  144_CM1_litt_orig_crinblanc_0.xml  145_CM1_litt_orig_sources_0.xml  152_CM1_lit_Oeilduloup_SIMP_0.xml  153_CM1_lit_Dragonneminuit_SIMP_0.xml  154_CM1_lit_CrinBlanc_SIMP_0.xml  155_CM1_lit_Sources_SIMP_0.xml  156_CM1_sci_orig_ecureuil_0.xml  156_CM1_sci_orig_ecureuil_1.xml  156_CM1_sci_orig_ecureuil_2.xml  157_CM1_sci_orig_arbres_0.xml  157_CM1_sci_orig_arbres_1.xml  157_CM1_sci_orig_arbres_2.xml  157_CM1_sci_orig_arbres_3.xml  157_CM1_sci_orig_arbres_4.xml  157_CM1_sci_orig_arbres_5.xml  158_CM1_sci_orig_chocolat_0.xml  18_CE1_litt_warda_SIMP_0.xml  (+20 more)
utils/: simpeval.yml
(+46 files in other folders)
