[options]
packages = find:
install_requires =
    # List your dependencies here, each on a separate line
    click>=8.1.6
	matplotlib
	nltk==3.6.5
	numpy
	pandas
	requests>=2.21.0
	tqdm>=4.32.2
	plotly>=4.0.0
	bert_score
	simalign
	stanza>=1.5.0
	tupa>=1.4.2
	blis==0.2.4
	charset-normalizer==3.2.0
	colorama==0.4.6
	ConfigArgParse==1.7
	cycler==0.11.0
	cymem==2.0.7
	Cython==3.0.0
	decorator==5.1.1
	docopt==0.6.2
	protobuf==3.20.0
	pyparsing==3.1.1
	sacrebleu==2.3.1
	sacremoses==0.0.53
	safetensors==0.3.2
	scikit-learn==1.0.2
	scipy==1.7.3
	plotly
	simalign==0.3
	six==1.16.0
	stanfordnlp==0.2.0
	tokenizers==0.13.3
	torch==1.13.1
	transformers==4.30.2
	typing_extensions>=4.7.1
	ucca>=1.2.3
	urllib3==2.0.4
	word2number==1.1
	yattag==1.15.1
	zipp==3.15.0
