[options]
packages = find:
install_requires =
    # List your dependencies here, each on a separate line
    click==8.1.6
	matplotlib==3.5.3
	nltk==3.4.3
	numpy==1.21.6
	pandas==1.3.5
	requests
	tqdm>=4.32.2
	plotly==5.15.0
	bert-score==0.3.13
	simalign==0.3
	stanza==1.5.0
	tupa==1.4.2
	blis==0.2.4
	charset-normalizer==3.2.0
	colorama==0.4.6
	ConfigArgParse==1.7
	cycler==0.11.0
	cymem==2.0.7
	Cython==3.0.0
	decorator==5.1.1
	docopt==0.6.2
	protobuf==3.20.0
	pyparsing==3.1.1
	sacrebleu==2.3.1
	sacremoses==0.0.53
	safetensors==0.3.2
	scikit-learn==1.0.2
	scipy==1.7.3
	plotly==5.15.0
	simalign==0.3
	six==1.16.0
	stanfordnlp==0.2.0
	tokenizers==0.13.3
	torch==1.13.1
	transformers==4.30.2
	typing_extensions==4.7.1
	ucca==1.2.3
	urllib3==2.0.4
	word2number==1.1
	yattag==1.15.1
	zipp==3.15.0
